[project]
authors = [{name = "roelanddeheld", email = "roelandnieboer@gmail.com"}]
dependencies = []
name = "DAS4diggers"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.3.0,<3"
geopandas = ">=1.1.0,<2"
shapely = ">=2.1.1,<3"
matplotlib = ">=3.10.3,<4"
ipykernel = ">=6.29.5,<7"
